trunk/Archive2/5d/2211835eaf1c6e/output
main.cpp:27:109: error: no type named 'dummy' in 'std::tuple<std::vector<int, std::allocator<int> >, std::vector<short, std::allocator<short> >, std::vector<char, std::allocator<char> > >'
        typename ContainerTemplate<std::vector, std::tuple<int>, std::tuple<short>, std::tuple<char> >::container::dummy;
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~
main.cpp:29:100: error: no type named 'dummy' in 'std::tuple<std::map<int, int, std::less<int>, std::allocator<std::pair<const int, int> > >, std::map<short, short, std::less<short>, std::allocator<std::pair<const short, short> > > >'
        typename ContainerTemplate<std::map, std::tuple<int, int>, std::tuple<short, short> >::container::dummy;
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~
2 errors generated.
